force-app/main/default/objects/TrainingRefund__c/TrainingRefund__c.object-meta.xml
<CustomObject>
    <label>Training Refund</label>
    <nameField>
        <displayFormat>REF-{000000}</displayFormat>
        <label>Training Refund Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Training Refunds</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>