force-app/main/default/objects/TrainingRefund__c/fields/Reason__c.field-meta.xml
<CustomField>
    <fullName>Reason__c</fullName>
    <label>Reason</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Schedule Change</fullName>
            </value>
            <value>
                <fullName>Course Cancellation</fullName>
            </value>
            <value>
                <fullName>Participant Withdrawal</fullName>
            </value>
            <value>
                <fullName>Technical Issues</fullName>
            </value>
            <value>
                <fullName>Billing Error</fullName>
            </value>
            <value>
                <fullName>Other (Specify in Comments)</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>