force-app/main/default/objects/TrainingRefund__c/fields/RefundDate__c.field-meta.xml
<CustomField>
    <fullName>RefundDate__c</fullName>
    <label>Refund Date</label>
    <type>Date</type>
</CustomField>