force-app/main/default/objects/TrainingRefund__c/fields/RefundId__c.field-meta.xml
<CustomField>
    <fullName>RefundId__c</fullName>
    <label>Refund Id</label>
    <length>30</length>
    <type>Text</type>
</CustomField>