force-app/main/default/objects/TrainingRefund__c/fields/TrainingInvoice__c.field-meta.xml
<CustomField>
    <fullName>TrainingInvoice__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <label>Training Invoice</label>
    <referenceTo>TrainingInvoice__c</referenceTo>
    <relationshipLabel>Training Refunds</relationshipLabel>
    <relationshipName>TrainingRefunds</relationshipName>
    <required>true</required>
    <type>Lookup</type>
</CustomField>