force-app/main/default/objects/TrainingRefund__c/fields/VerificationId__c.field-meta.xml
<CustomField>
    <fullName>VerificationId__c</fullName>
    <label>Verification Id</label>
    <length>30</length>
    <type>Text</type>
</CustomField>