force-app/main/default/objects/TrainingRefund__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Participant__c</columns>
    <columns>TrainingInvoice__c</columns>
    <columns>Amount__c</columns>
    <columns>RefundDate__c</columns>
    <columns>Status__c</columns>
    <columns>RefundId__c</columns>
    <columns>VerificationId__c</columns>
    <columns>Reason__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>